--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   collection: ^1.15.0
   synchronized: ^3.0.0
   shared_preferences: ^2.0.6
+  json_annotation: ^4.0.1
+  permission_handler: ^8.1.2
 
   dio: ^4.0.0
   uuid: ^3.0.4
@@ -25,7 +27,11 @@ dependencies:
   convert: ^3.0.0
   logger: ^1.0.0
 
+  yuro_plugin:
+    path: ../yuro_plugin
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.0.6
+  json_serializable: ^4.0.1
