--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,23 +12,25 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  provider: ^5.0.0
-  path_provider: ^2.0.2
-  package_info: ^2.0.0
-  collection: ^1.15.0
-  synchronized: ^3.0.0
-  shared_preferences: ^2.0.6
-  json_annotation: ^4.0.1
-  permission_handler: ^8.1.2
 
-  dio: ^4.0.0
-  uuid: ^3.0.4
-  crypto: ^3.0.1
-  convert: ^3.0.0
-  logger: ^1.0.0
+  dio: ^4.0.0                   # https://pub.dev/packages/dio
+  uuid: ^3.0.4                  # https://pub.dev/packages/uuid
+  crypto: ^3.0.1                # https://pub.dev/packages/crypto
+  convert: ^3.0.1               # https://pub.dev/packages/convert
+  logger: ^1.1.0                # https://pub.dev/packages/logger
+  collection: ^1.15.0           # https://pub.dev/packages/collection
+  synchronized: ^3.0.0          # https://pub.dev/packages/synchronized
+  provider: ^6.0.0              # https://pub.dev/packages/provider
+  path_provider: ^2.0.3         # https://pub.dev/packages/path_provider
+  package_info: ^2.0.0          # https://pub.dev/packages/package_info
+  shared_preferences: ^2.0.7    # https://pub.dev/packages/shared_preferences
+  permission_handler: ^8.1.6    # https://pub.dev/packages/permission_handler
+  objectbox: ^1.2.0             # https://pub.dev/packages/objectbox
+  objectbox_flutter_libs: ^1.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.0.6
   json_serializable: ^4.0.1
+  objectbox_generator: ^1.2.0
