--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: yuro
 description: A Flutter package.
-version: 0.2.1
+version: 0.3.0-dev
 homepage: https://github.com/YuroLtd/yuro_kit.git
 
 environment:
