--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,11 @@ dependencies:
   path_provider: ^2.0.3         # https://pub.dev/packages/path_provider
   shared_preferences: ^2.0.7    # https://pub.dev/packages/shared_preferences
   permission_handler: ^8.1.6    # https://pub.dev/packages/permission_handler
+  equatable: ^2.0.3             # https://pub.flutter-io.cn/packages/equatable
 
-  yuro_plugin:
-    path: ../yuro_plugin
+  yuro_plugin: ^0.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.0
