--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: yuro
 description: A Flutter package.
-version: 0.4.0
+version: 0.4.1
 homepage: https://github.com/YuroLtd/yuro_kit.git
 
 environment:
@@ -25,9 +25,9 @@ dependencies:
   shared_preferences: ^2.0.11    # https://pub.dev/packages/shared_preferences
   permission_handler: ^8.1.6    # https://pub.dev/packages/permission_handler
   equatable: ^2.0.3             # https://pub.flutter-io.cn/packages/equatable
-  drift: ^1.1.1
-  sqlite3_flutter_libs: ^0.5.0
-
+  json_annotation: ^4.4.0
+  objectbox: ^1.3.0
+  objectbox_flutter_libs: ^1.3.0
   yuro_plugin: ^0.0.1
 
 dev_dependencies:
@@ -35,4 +35,5 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
   build_runner: ^2.1.7
-  drift_dev: ^1.1.1
+  objectbox_generator: ^1.3.0
+  json_serializable: ^6.1.3
