--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: yuro
 description: A Flutter package.
-version: 0.4.1
+version: 0.4.1+1
 homepage: https://github.com/YuroLtd/yuro_kit.git
 
 environment:
