--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: yuro
 description: A Flutter package.
-version: 0.4.1+1
+version: 0.4.1+2
+publish_to: https://pub.dev/
 homepage: https://github.com/YuroLtd/yuro_kit.git
 
 environment:
