--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,12 @@ dependencies:
   provider: ^6.0.1              # https://pub.dev/packages/provider
   path: ^1.8.0
   path_provider: ^2.0.8         # https://pub.dev/packages/path_provider
-  shared_preferences: ^2.0.11    # https://pub.dev/packages/shared_preferences
+  shared_preferences: ^2.0.11   # https://pub.dev/packages/shared_preferences
   permission_handler: ^8.1.6    # https://pub.dev/packages/permission_handler
   equatable: ^2.0.3             # https://pub.flutter-io.cn/packages/equatable
-  json_annotation: ^4.4.0
-  objectbox: ^1.3.0
-  objectbox_flutter_libs: ^1.3.0
+  json_annotation: ^4.4.0       # https://pub.flutter-io.cn/packages/json_annotation
+  hive: ^2.0.5                  # https://pub.flutter-io.cn/packages/hive
+  hive_flutter: ^1.1.0          # https://pub.flutter-io.cn/packages/hive_flutter
   yuro_plugin: ^0.0.1
 
 dev_dependencies:
@@ -36,5 +36,5 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
   build_runner: ^2.1.7
-  objectbox_generator: ^1.3.0
+  hive_generator: ^1.1.1      # https://pub.flutter-io.cn/packages/hive_generator/install
   json_serializable: ^6.1.3
