--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: yuro
 description: A Flutter package.
-version: 0.4.3
+version: 0.4.3+1
 publish_to: https://pub.dev/
 homepage: https://github.com/YuroLtd/yuro.git
 
