fix: 修改应用信息和userAgent获取方式

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,22 +17,26 @@ dependencies:
   uuid: ^3.0.5                  # https://pub.dev/packages/uuid
   crypto: ^3.0.1                # https://pub.dev/packages/crypto
   convert: ^3.0.1               # https://pub.dev/packages/convert
-  collection: ^1.15.0           # https://pub.dev/packages/collection
-  provider: ^6.0.1              # https://pub.dev/packages/provider
-  path: ^1.8.0
+  provider: ^6.0.2              # https://pub.dev/packages/provider
   path_provider: ^2.0.8         # https://pub.dev/packages/path_provider
-  shared_preferences: ^2.0.11   # https://pub.dev/packages/shared_preferences
+  shared_preferences: ^2.0.13   # https://pub.dev/packages/shared_preferences
   permission_handler: ^8.1.6    # https://pub.dev/packages/permission_handler
   equatable: ^2.0.3             # https://pub.flutter-io.cn/packages/equatable
   json_annotation: ^4.4.0       # https://pub.flutter-io.cn/packages/json_annotation
-  hive: ^2.0.5                  # https://pub.flutter-io.cn/packages/hive
+  hive: ^2.1.0                  # https://pub.flutter-io.cn/packages/hive
   hive_flutter: ^1.1.0          # https://pub.flutter-io.cn/packages/hive_flutter
-  yuro_plugin: ^0.1.0+2
+#  yuro_plugin: ^0.1.0+2
+  package_info_plus: ^1.4.2
+  flutter_user_agentx: ^1.2.4
+
+dependency_overrides:
+  path: ^1.8.1
+  collection: ^1.16.0           # https://pub.dev/packages/collection
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
   build_runner: ^2.1.7
-  hive_generator: ^1.1.1      # https://pub.flutter-io.cn/packages/hive_generator/install
-  json_serializable: ^6.1.3
+  hive_generator: ^1.1.2      # https://pub.flutter-io.cn/packages/hive_generator/install
+  json_serializable: ^6.1.5
