add uuid support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   path_provider: ^2.0.11        # https://pub.dev/packages/path_provider
   convert: ^3.0.1               # https://pub.dev/packages/convert
   crypto: ^3.0.2                # https://pub.dev/packages/crypto
+  uuid: 3.0.6
   stack_trace: ^1.10.0
   dio: ^4.0.6                   # https://pub.dev/packages/dio
   mqtt_client: ^9.6.8           # https://pub.dev/packages/mqtt_client
