--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
     sdk: flutter
   collection: ^1.16.0
   path: ^1.8.1
-  hive_flutter: ^1.1.0          # https://pub.flutter-io.cn/packages/hive_flutter
+  isar: ^3.0.2                  # https://pub.flutter-io.cn/packages/isar
+  isar_flutter_libs: ^3.0.2
   shared_preferences: ^2.0.15   # https://pub.dev/packages/shared_preferences
   path_provider: ^2.0.11        # https://pub.dev/packages/path_provider
   convert: ^3.0.1               # https://pub.dev/packages/convert
@@ -30,5 +31,5 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   build_runner: ^2.2.0
-  hive_generator: ^1.1.2      # https://pub.flutter-io.cn/packages/hive_generator
+  isar_generator: ^3.0.2      # https://pub.flutter-io.cn/packages/isar_generator
 
