--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,16 +29,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
   yuro:
     path: ../
-  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +49,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.2.0
+  isar_generator: ^3.0.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -60,7 +59,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -92,3 +90,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
+  main_locale: 'zh'
