错误的收集与上传

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -57,7 +57,7 @@ android {
 
     defaultConfig {
         applicationId "com.yuro.example"
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
