--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+16
+version: 1.0.0+101
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -35,8 +35,12 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
+  json_annotation: ^4.7.0
+  yuro_annotation: ^0.2.0
   yuro:
     path: ../
+  yuro_plugin:
+    path: ../../yuro_plugin
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +54,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.2.0
   isar_generator: ^3.0.2
+  json_serializable: ^6.5.4
+  yuro_generator: ^0.2.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
