--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   yuro:
     path: ../
   yuro_plugin:
-    path: ../../yuro_plugin
+#    path: ../../yuro_plugin
+    git:
+      url: https://github.com/YuroLtd/yuro_plugin.git
+      ref: 5f8d6a4ffab72a32c7139c6e372d0d386be38004
 
 dev_dependencies:
   flutter_test:
