--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 homepage: https://github.com/YuroLtd/yuro
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: '>=2.19.3 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
@@ -22,7 +22,6 @@ dependencies:
   crypto: ^3.0.2                # https://pub.dev/packages/crypto
   uuid: ^3.0.6
   dio: ^4.0.6                   # https://pub.dev/packages/dio
-  mqtt_client: ^9.6.8           # https://pub.dev/packages/mqtt_client
   equatable: ^2.0.3             # https://pub.dev/packages/equatable
   buffer: ^1.1.1                # https://pub.dev/packages/buffer
   crclib: ^3.0.0                # https://pub.dev/packages/crclib
