--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0
   dio: ^5.2.1
   buffer: ^1.2.0
+  flutter_animate: ^4.2.0
   
 dev_dependencies:
   flutter_test:
