--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,13 @@ dependencies:
   equatable: ^2.0.5
   isar: ^3.1.0                 
   isar_flutter_libs: ^3.1.0
-  dio: ^5.3.0
+  dio: ^5.3.1
   buffer: ^1.2.0
   flutter_animate: ^4.2.0
+
+dependency_overrides:
+  intl: ^0.18.1
+  collection: ^1.18.0
   
 dev_dependencies:
   flutter_test:
